force-app/main/default/objects/DRA__c/DRA__c.object-meta.xml
<CustomObject>
    <label>DRA</label>
    <nameField>
        <displayFormat>QDM-{00000}</displayFormat>
        <label>DRA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DRA</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>