force-app/main/default/objects/DRA__c/fields/ChangedBy__c.field-meta.xml
<CustomField>
    <fullName>ChangedBy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Changed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>