force-app/main/default/objects/DRA__c/fields/DRA__c.field-meta.xml
<CustomField>
    <fullName>DRA__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Unique ID for the DRA in PRISM.</inlineHelpText>
    <label>DRA#</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>