force-app/main/default/objects/DRA__c/fields/Last_Action__c.field-meta.xml
<CustomField>
    <fullName>Last_Action__c</fullName>
    <inlineHelpText>Sent – waiting on DRA to be returned by the customer
Received – DRA returned by customer and received by PRISM
Modified – DRA has been changed/modified by the customer and must be re-sent
Produced – DRA created by the QDM team</inlineHelpText>
    <label>Last Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Modified</fullName>
            </value>
            <value>
                <fullName>Produced</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>