force-app/main/default/objects/DRA__c/fields/Last_Changed__c.field-meta.xml
<CustomField>
    <fullName>Last_Changed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Changed</label>
    <type>Date</type>
</CustomField>