force-app/main/default/objects/DRA__c/fields/Requested_From__c.field-meta.xml
<CustomField>
    <fullName>Requested_From__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>as per DRA begin date</inlineHelpText>
    <label>Requested From</label>
    <type>Date</type>
</CustomField>